# homebrain_core

./: .project  CMakeCache.txt  CMakeLists.txt  HBconfig.conf  Makefile  cmake_install.cmake  config.mk  defaults.mk  make.sh  rules.mk
cmake/: EnableCCompilerFlag.cmake  FindAutomotiveDlt.cmake  HomeBrain.cmake  homebrain.cmake
config/: HBconfig.conf  HBconfig_host.conf  HBconfig_target.conf
driver/serial/: CxSerialDriver.cpp  CxSerialDriver.h
events/: EventDefinition.h
framework/connection/: CxConnection.cpp  CxConnection.h  CxConnectionManager.cpp  CxConnectionManager.h  CxDeviceDeclaration.cpp  CxFileSystemConnection.cpp  CxFileSystemConnection.h  CxSerialConnection.cpp  CxSerialConnection.h  CxVirtualConnection.cpp  CxVirtualConnection.h  IxConnection.cpp
framework/debug/: CxDebugBase.cpp  CxDebugBase.h  CxDebugProcessor.cpp  CxDebugProcessor.h  CxLocalDbg.cpp  CxLocalDbg.h  DebugConfig.h  DebugMacros.h  ScopeDeclaration.cpp  ScopeDeclaration.h
framework/devctrl/: CxLogDevice.cpp  CxLogDevice.h  CxLogDeviceManager.cpp  CxLogDeviceManager.h  IxLogDevice.cpp  IxLogDevice.h
framework/eventpool/: CxEvent.cpp  CxEvent.h  CxEventDispatcher.cpp  CxEventDispatcher.h  IxEventConsumer.cpp  IxEventConsumer.h  IxEventProducer.cpp  IxEventProducer.h
framework/interface/: CxInterface.cpp  CxInterface.h  CxInterfaceManager.cpp  CxInterfaceManager.h  IxInterface.h
framework/parser/: CxIniFileParser.cpp  CxIniFileParser.h
framework/provider/: CxDataProvider.h
framework/staticpool/: CxCyclicQueue.cpp  CxCyclicQueue.h  CxList.cpp  CxList.h  CxStaticPool.cpp  CxStaticPool.h  CxStaticQueue.cpp  CxStaticQueue.h  CxVector.cpp  CxVector.h
framework/system/: CxLauncher.cpp  CxLauncher.h  CxTstThread.cpp  CxTstThread.h  CxUARTTST.cpp  CxUARTTST.h  PSysI.cpp  PSysI.h
framework/vtimer/: CxVtimer.cpp  CxVtimer.h  IxTimerEventConsumer.h
kernel/board/: Cstartup.s  board.h  board_lowlevel.c  board_memories.c
kernel/source/: tasks.c
main/: HomeBrainVx01.c  HomeBrainVx01.cpp
pal/: utils.cpp  utils.h
pal/common/: ptypes.h  slog.c  slog.cpp  slog.h  utils.cpp  utils.h
pal/os wraper/: .depend  CxAssertion.cpp  CxAssertion.h  CxMutex.cpp  CxSystemQueue.h  CxThreadIO.h  IxDriver.cpp  IxFileSystem.h  IxRunnable.cpp  IxRunnable.h  Makefile
pal/os_wraper/: CxDriverManager.cpp  CxDriverManager.h  CxMutex.cpp  CxMutex.h  CxMutexLocker.cpp  CxMutexLocker.h  CxMutexRecursive.cpp  CxMutexRecursive.h  CxQueue.cpp  CxQueue.h  CxSysTimer.cpp  CxSysTimer.h  CxSystemQueue.cpp  CxThreadIO.cpp  CxThreadIO.h  IxDriver.cpp  IxDriver.h  IxFileSystem.cpp  IxFileSystem.h  IxRunnable.cpp  IxRunnable.h
project/amplifier/: CxAmplifier.cpp  CxAmplifier.h
project/interfaces/: CxDataConnection.cpp  CxDataConnection.h  CxModBusMaster.cpp  CxModBusMaster.h  CxModBusSlave.cpp  CxModBusSlave.h  MBusDB.cpp  MBusDB.h
project/modbus/: CxBusHelper.cpp  CxBusSlave.h  DefComVar.h  EMOD.cpp  EMODDef.h  MBusDB.h  kernel.cpp
project/processor/: CxUsoProcessor.cpp  CxUsoProcessor.h
project/provider/: CxDataProvider.cpp  CxDataProvider.h
project/twiTest/: CxTwiTest.c  CxTwiTest.h  aic.h  i2c_test_ISR.s79  pio.h  pio_it.c  pio_it.h
project/uso/: CxLogDev_ExtMod.cpp  EMOD.h  (+11 more)
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/driver/: CMakeLists.txt
src/driver/serial/: CxSerialDriver.cpp
src/driver/serial/include/serial/: CxSerialDriver.h
src/framework/: CMakeLists.txt
src/framework/debug/: CxDebugBase.h  CxLocalDbg.h  DebugMacros.h
src/framework/devctrl/: CxLogDevice.cpp  CxLogDeviceManager.cpp  CxLogDeviceManager.h
src/framework/devctrl/include/devctrl/: CxLogDevice.h  CxLogDeviceManager.h  IxLogDevice.h
src/framework/eventpool/: CxEventDispatcher.cpp  CxEventDispatcher.h  IxEventConsumer.cpp  IxEventConsumer.h  IxEventProducer.cpp  IxEventProducer.h
src/framework/eventpool/include/eventpool/: CxEvent.h  CxEventDispatcher.h  EventDefinition.h  IxEventConsumer.h  IxEventProducer.h
src/framework/interface/: CxInterface.cpp  CxInterfaceManager.cpp  IxInterface.h
src/framework/interface/include/interface/: CxInterface.h  CxInterfaceManager.h  IxInterface.h
src/framework/parser/: CxIniFileParser.cpp
src/framework/parser/include/parser/: CxIniFileParser.h
src/framework/staticpool/: CxCyclicQueue.h  CxStaticPool.cpp
src/framework/staticpool/include/staticpool/: CxList.h  CxStaticPool.h  CxVector.h
src/main/: CMakeLists.txt  HomeBrainVx01.cpp
src/pal/: CMakeLists.txt
src/pal/common/: slog.cpp  utils.cpp  utils.h
src/pal/common/include/common/: ptypes.h  slog.h  utils.h
src/pal/os_wraper/: CxMutex.h  CxMutexLocker.h  CxMutexRecursive.cpp  CxMutexRecursive.h  CxQueue.cpp  CxQueue.h  CxThreadIO.cpp  IxDriver.cpp
src/pal/os_wrapper/: CxMutex.cpp  CxMutexLocker.cpp  CxMutexRecursive.cpp  CxQueue.cpp  CxSysTimer.cpp  CxThreadIO.cpp  IxDriver.cpp  IxRunnable.cpp
src/pal/os_wrapper/include/os_wrapper/: CxMutex.h  CxMutexLocker.h  CxMutexRecursive.h  CxQueue.h  CxSysTimer.h  CxThreadIO.h  IxDriver.h  IxFileSystem.h  IxRunnable.h
src/project/: CMakeLists.txt
src/project/interfaces/: CxDataAccessServer.cpp  CxModBusMaster.cpp  CxModBusMaster.h  CxModBusSlave.cpp  CxModBusSlave.h  MBusDB.cpp  MBusDB.h
src/project/interfaces/include/interfaces/: CxDataAccessServer.h  CxModBusMaster.h  CxModBusSlave.h  DataDB.h  MBusDB.h
src/project/processor/: CxUsoProcessor.cpp  CxUsoProcessor.h
src/project/processor/include/processor/: CxUsoProcessor.h
src/project/provider/: CxDataProvider.cpp  CxDataProvider.h  CxDataServer.cpp
src/project/provider/include/provider/: CxDataProvider.h  CxDataServer.h
src/project/uso/: CxLogDev_DIO_OVEN.cpp  CxLogDev_ExtMod.cpp  CxLogDev_ExtMod.h  CxLogDev_MA16.cpp  CxLogDev_MA16.h
src/project/uso/include/uso/: CxLogDev_DIO_OVEN.h  CxLogDev_ExtMod.h  CxLogDev_MA16.h  USODefinition.h
src/startup/: CMakeLists.txt  CxLauncher.cpp  CxUsoCfgLoader.cpp  CxUsoCfgLoader.h
src/startup/include/startup/: CxLauncher.h  CxUsoCfgLoader.h
startup/: CxLauncher.cpp  CxLauncher.h  CxUsoCfgLoader.cpp  CxUsoCfgLoader.h
uso/: EMODDef.h  IOBit.cpp  USO.h
(+59 files in other folders)
